Добавлена форма создания заявки. Добавлена модель номинации.

--- a/it_vesna/templates/main.html
+++ b/it_vesna/templates/main.html
@@ -47,7 +47,7 @@
         <a href="#">Войти</a> | <a href="#">Зарегистрироваться</a>
     </div>
 
-    <a class="bottom_bid" href="#">Заявка на участие</a>
+    <a class="bottom_bid" href="/application">Заявка на участие</a>
 
 <!--/header-->
 </header></div>
